# cfln-lm

./: CLAUDE.md  README.md  main.py  pyproject.toml
docs/: CFLN_Kaggle_Run_Plan_v2.md  CFLN_Master_Spec.md  CFLN_v900_Implementation_Plan.md  spec_compliance.md
docs/archive/: CFLN_Kaggle_Run_Plan.md  CFLN_v609_Master_Spec.md  CFLN_v609_Master_Spec_2.md  CFLN_v700_Spec.md  CFLN_v800_Addendum.md  CFLN_v800_Spec.md  CFLN_v900_AI_Instructions.md  CFLN_v900_Master_Spec.md  CFLN_v900_Spec.md
notebooks/: kaggle_training.ipynb
src/cfln/: config.py  utils.py
src/cfln/inference/: ctp.py  dcg.py
src/cfln/modules/: alpha_hist.py  bank.py  cfl5.py  coact.py  diffusion.py  dynamic_bank.py  embedding.py  encoder.py  gat.py  highway.py  hopfield.py  lru.py  model.py  monitoring.py  muon.py  psc_loss.py  si.py  sti_head.py  surprise.py  telescoping.py  titans.py  uncertainty.py  v9_ops.py
src/cfln/training/: curriculum.py  optimizers.py  train_step.py
tests/: conftest.py  test_bindings.py  test_cfbank_integration.py  test_cfl5_layer.py  test_diffusion_module.py  test_forward_pass.py  test_si_continual.py  test_smoke.py  test_train_utils.py  test_training_loop.py  test_utils.py  test_utils_extended.py  test_vq_memory.py
