[project]
name = "cfln-lm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.4",
    "pytest>=9.0.3",
    "torch>=2.11.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint]
# Spec uses compact semicolon style throughout — suppress compound-statement warnings
ignore = ["E701", "E702", "E741"]
