[project]
name = "cfln-lm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pytest>=7.0",
    "torch>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint]
# Spec uses compact semicolon style throughout — suppress compound-statement warnings
ignore = ["E701", "E702", "E741"]
